[project]
name = "dune-dashboard-mcp"
version = "0.1.0"
description = "A mcp server that bridges Dune Dashboard data to AI agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.4.1",
    "pandas>=2.2.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.4",
]
